Implement downvoteComment
